--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/profile.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <title>DitzDev BioLink</title>
+    <title>leooooOoo personal web</title>
   </head>
   <body>
     <div id="root"></div>
